--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -4,6 +4,8 @@
   align-items: center;
   height: 4rem;
   color: white;
+  position: sticky;
+  top: 0;
   background-color: #333;
   padding: 0 20px;
 }
