--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -3,6 +3,12 @@
   cursor: pointer;
 }
 
+.Wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 1rem;
+  align-items: center;
+}
 .LeftSide {
   display: flex;
   flex-direction: row;
@@ -12,7 +18,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 10%;
+  width: 60px;
 }
 
 .Emoji span {
@@ -31,4 +37,17 @@
 .CardInfo p {
   display: inline-block;
   margin: 0;
+}
+
+.EditButton {
+  padding: 0.8rem;
+  border-radius: 5px;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transform: scale(1);
+}
+
+.EditButton:hover {
+  transform: scale(1.1);
 }
